--- a/style.css
+++ b/style.css
@@ -2,4 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    max-width: 1200px;
+}
+
+body{
+    margin: 20px;
+}
+
+.m-bottom{
+    margin-bottom: 2rem;
 }
